--- a/src/main/java/Resources/data.properties
+++ b/src/main/java/Resources/data.properties
@@ -1,2 +1,2 @@
 browser=chrome
-url=https://naveenautomationlabs.com/opencart/index.php?route=account/login
+URL=https://naveenautomationlabs.com/opencart/
